--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>primaryModel</members>
-        <name>CampaignInfluenceModel</name>
+        <members>DevOps__c.LastActivityDate</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>DevOps__c</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>DevOps__c-en_US</members>
+        <name>CustomObjectTranslation</name>
+    </types>
+    <types>
+        <members>DevOps__c-DevOps Layout</members>
+        <name>Layout</name>
+    </types>
+    <types>
+        <members>DevOps__c</members>
+        <name>SharingRules</name>
+    </types>
+    <types>
+        <members>DevOps__c</members>
+        <name>TopicsForObjects</name>
     </types>
     <version>58.0</version>
 </Package>
